Add provision to launch the Android app from resource directory using appium